Fix landing page background image to first section of page and not stretch to the full height of the page on opening the shopping cart modal

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,8 @@
 
 @layer base {
   :root {
-    /* --background: 0 0% 100%; */
-    --background: #fee5f0;
+    --background: 0 0% 100%;
+    /* --background: #fee5f0; */
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -28,8 +28,8 @@
   }
 
   .dark {
-    /* --background: 222.2 84% 4.9%; */
-    --background: #fee5f0;
+    --background: 222.2 84% 4.9%;
+    /* --background: #fee5f0; */
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
@@ -52,7 +52,7 @@
 }
 
 body {
-  background-color: #fee5f0;
+  /* background-color: #fee5f0; */
 }
 
 @layer base {
